comment out @taro-kig

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <canvas id="heroCanvas" aria-label="K"></canvas>
     <div class="flyer-strip" role="region" aria-label="Flyer bottom strip">
       <div class="mini-wrap" id="miniLetters" aria-label="Other letters"></div>
-      <div class="strap" id="strapText">@TARO_KIG</div>
+      <!-- <div class="strap" id="strapText">@TARO_KIG</div> -->
     </div>
   </section>
 
