update footer doc

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
   </main>
 
-  <footer>© <span id="year"></span> KIGURUMI — Visible rules for letters.</footer>
+  <footer>© <span id="year"></span> @TARO_KIG — Visible rules for letters.</footer>
 
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
